# gambas3

./: .gitlab-ci.yml  AUTHORS  Makefile.am  README  README.md  VERSION  acinclude.m4  component.am  configure.ac  version.m4
TEMPLATE/conf/: gb.mongodb.conf
TEMPLATE/template/: configure.ac
app/: Makefile.am
app/desktop/: gambas3.desktop
app/man/: gambas3.1  gbs3.1  gbw3.1
app/mime/: application-x-gambasscript.xml  application-x-gambasserverpage.xml
app/src/gambas-farm-server/: .project  .version
app/src/gambas-wiki/: .environment  .project
app/src/gambas3/: .project  authors.txt  support.txt
app/src/gambas3-selftest/: .environment  .project  .test
app/src/gb.wiki/: .project
app/src/gbs3/: .project
app/template/console/: .project
app/template/database/: .project
app/template/graphical/: .project
app/template/gtk2/: .project
app/template/gtk3/: .project
app/template/qt/: .project
benchmark/: benchmark.gbs  btree.gbs  btree.jvs  btree.pl  btree.py  mandelbrot.jvs  string1.py
comp/: Makefile.am
comp/src/: order
gb.db.mysql/: configure.ac
gb.db.mysql/src/: main.c
gb.db.odbc/: configure.ac
gb.db.odbc/src/: main.c
gb.db.postgresql/src/: main.c
gb.db.sqlite2/src/: main.cpp
gb.db.sqlite3/src/: main.c
gb.db2.mysql/: configure.ac  gb.db.h
gb.db2.mysql/src/: Makefile.am  gb.db2.mysql.component  main.c  main.h
gb.db2.odbc/: configure.ac  gb.db.h
gb.db2.odbc/src/: Makefile.am  gb.db2.odbc.component  main.c
gb.db2.odbc/src/gb.db2.odbc/: .project
gb.db2.postgresql/: configure.ac
gb.db2.postgresql/src/: Makefile.am  gb.db2.postgresql.component  main.c
gb.db2.postgresql/src/gb.db2.postgresql/: .project
gb.db2.sqlite3/: configure.ac
gb.db2.sqlite3/src/: Makefile.am  gb.db2.sqlite3.component  helper.c  helper.h  main.c  main.h
gb.dbus/src/: helper.c
gb.form.htmlview/src/: Makefile.am  c_htmldocument.cpp  c_htmldocument.h  main.cpp
gb.form.htmlview/src/gb.form.htmlview/: .component  .project  master.css
gb.form.htmlview/src/gb.form.htmlview/.src/: FTest.form
gb.form.htmlview/src/litehtml/: render_item.cpp
gb.gtk/: configure.ac
gb.gtk/src/: CButton.cpp  CClipboard.cpp  CColor.cpp  CContainer.cpp  CContainer.h  CDrawingArea.cpp  CImage.cpp  CImage.h  CMenu.cpp  CMouse.cpp  CPicture.cpp  CScreen.cpp  CScreen.h  CSlider.cpp  CStyle.cpp  CTabStrip.cpp  CTextArea.cpp  CTextBox.cpp  CWidget.cpp  CWidget.h  CWindow.cpp  cpaint_impl.cpp  gapplication.cpp  gapplication.h  gbutton.cpp  gcontainer.cpp  gcontainer.h  gcontrol.cpp  gcontrol.h  gdesktop.cpp  gdesktop.h  gdialog.cpp  gdrag.cpp  gdrag.h  gdrawingarea.cpp  gdrawingarea.h  gkey.cpp  gkey.h  gmainwindow.cpp  gmenu.cpp  (+13 more)
gb.gtk3/: configure.ac
gb.gtk3/src/: gb.gtk.platform.h  main.cpp
gb.httpd/src/: libhttpd.c
gb.media/src/: c_media.c  c_media.h  c_mediaplayer.h  main.c  main.h
gb.mime/src/: c_mimemessage.c
gb.mongodb/: Makefile.am  configure.ac
gb.mongodb/src/: Makefile.am  c_mongoclient.c  c_mongoclient.h  c_mongocollection.c  c_mongocollection.h  c_mongoresult.c  c_mongoresult.h  helper.c  helper.h  main.c  main.h
gb.mongodb/src/gb.mongodb/: .project
gb.mongodb/src/gb.mongodb/.src/: Main.module
gb.net.curl/src/: CCurl.c  CCurl.h  CFtpClient.c  CHttpClient.c  gbcurl.c  gbcurl.h
gb.net/src/: CNet.c  CServerSocket.c  CSocket.c  CSocket.h  CUdpSocket.c
gb.openssl/src/: c_cipher.c  c_digest.c  c_openssl.c  main.c  main.h
gb.pcre/src/: Makefile.am  regexp.c  regexp2.c  regexp_common.h
gb.pdf/: configure.ac
gb.pdf/src/: CPdfDocument.cpp  Makefile.am
gb.poppler/src/: Makefile.am  c_pdf_document.cpp
gb.qt4/share/: gb.form.arrangement.h  gb.form.const.h  gb.form.gui.h  gb.form.properties.h
gb.qt4/src/: CClipboard.cpp  CColor.cpp  CColor.h  CConst.cpp  CContainer.cpp  CContainer.h  CDrawingArea.cpp  CFont.cpp  CImage.cpp  CImage.h  CKey.cpp  CMenu.cpp  CMouse.cpp  CMouse.h  CPicture.cpp  CScreen.cpp  CScreen.h  CStyle.cpp  CTextArea.cpp  CTextBox.cpp  CWidget.cpp  CWidget.h  CWindow.cpp  CWindow.h  cpaint_impl.cpp  fix_style.cpp  fix_style.h  gb.qt.h  main.cpp  main.h
gb.qt5/src/: gb.qt.platform.h  main.cpp
gb.qt6/: Makefile.am  configure.ac
gb.qt6/src/: Makefile.am  gb.qt.platform.h  gb.qt6.component  main.cpp  main.h
gb.qt6/src/ext/: Makefile.am  gb.qt6.ext.component
gb.qt6/src/opengl/: CGLarea.cpp  CGLarea.h  Makefile.am  gb.qt6.opengl.component  main.cpp  main.h
gb.qt6/src/wayland/: Makefile.am  gb.qt6.wayland.component  main.cpp
gb.qt6/src/webview/: Makefile.am  c_websettings.cpp  c_websettings.h  c_webview.cpp  c_webview.h  gb.qt6.webview.component  main.cpp  main.h
gb.qt6/src/x11/: Makefile.am  main.cpp  main.h
gb.sdl2/src/: c_mouse.c  c_mouse.h
main/: Makefile.am  configure.ac
main/comp/: Makefile.am  order
main/gbc/: gb_error.c  gba.c  gbc.c  gbc_class.c  gbc_class.h  gbc_compile.c  gbc_compile.h  gbc_output.c  gbc_read.c  gbc_reserved_make.c  gbc_trans.c  gbc_trans.h  gbc_trans_code.c  gbc_trans_const.c  gbc_trans_ctrl.c  gbc_trans_expr.c  gbc_trans_subr.c  gbc_trans_tree.c
main/gbx/: Makefile.am  gb_error.c  gb_error.h  gbx.c  gbx_api.c  gbx_api.h  gbx_archive.c  gbx_archive.h  gbx_c_application.c  gbx_c_array.c  gbx_c_array.h  gbx_c_class.c  gbx_c_collection.c  gbx_c_collection.h  gbx_c_enum.c  gbx_c_error.c  gbx_c_file.c  gbx_c_file.h  gbx_c_gambas.c  gbx_c_process.c  gbx_c_string.c  gbx_c_system.c  gbx_c_task.c  gbx_c_task.h  gbx_c_timer.c  gbx_class.c  gbx_class.h  gbx_class_info.c  gbx_class_init.c  gbx_class_load.c  gbx_compare.c  gbx_component.c  gbx_date.c  gbx_date.h  gbx_debug.c  gbx_debug.h  gbx_eval.c  gbx_exec.c  gbx_exec.h  gbx_exec_loop.c  (+32 more)
main/lib/: Makefile.am
main/lib/gui.qt.ext/: Makefile.am  main.c
main/man/: gba3.1  gbc3.1  gbh3.1  gbi3.1  gbr3.1  gbx3.1
main/share/: gambas.h  gb_alloc_temp.h  gb_array_temp.h  gb_buffer_temp.h  gb_code.h  gb_code_temp.h  gb_common.h  gb_constant_temp.h  gb_file_share.h  gb_file_temp.h  gb_limit.h  gb_pcode.h  gb_pcode_temp.h  gb_reserved.h  gb_reserved_keyword.h  gb_reserved_temp.h  gb_system_temp.h  gb_table_temp.h  gbc_read_temp.h
(+493 files in other folders)
